# mobile-serving-tutorials

./: .gitignore  DevSeminar.ipynb  LICENSE  README.md
mnn_demo/: CMakeLists.txt
mnn_demo/lib/MNN/shared/: libMNN.dylib
mnn_demo/src/: main.cpp
pytorch_demo/: CMakeLists.txt
pytorch_demo/src/: main.cpp
tflite_demo/: CMakeLists.txt
tflite_demo/src/: main.cpp
